HW6/content/k3s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: hw6
  labels:
    app: hw6
    component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw6
      component: api
  template:
    metadata:
      labels:
        app: hw6
        component: api
    spec:
      containers:
      - name: api
        image: chien314832001/hw5_api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
