HW6/content/k3s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: hw6
  labels:
    app: hw6
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: hw6
    component: api
