HW6/content/k3s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: hw6
  labels:
    app: hw6
    component: db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: hw6
    component: db
