HW6/content/k3s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: hw6
  labels:
    app: hw6
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: hw6
    component: web
